two ways to run: /stucco will be created from github repos, /stucco-shared is mounted from host os